# litmus-zk

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/chain/: README.md
crates/lkernel/src/kernel/: mod.rs
crates/ltypeset-utils/: Cargo.toml
crates/ltypeset-utils/src/: lib.rs
crates/ltypeset-utils/src/codecs/binary/chain/: block.rs  chain_name_digest.rs  era.rs  era_id.rs  motes.rs  validator_weight.rs
crates/ltypeset-utils/src/codecs/binary/crypto/: digest.rs  signature.rs
crates/ltypeset-utils/src/codecs/binary/primitives/: bites.rs  misc.rs  text.rs  time.rs  uint.rs
crates/ltypeset-utils/src/crypto/: block.rs  mod.rs
crates/ltypeset-utils/src/verifiers/: mod.rs
crates/ltypeset/src/chain/: block_id.rs  block_v2.rs
crates/ltypeset/src/crypto/: digest.rs
crates/ltypeset/src/primitives/: bites.rs
crates/lverifiers/: Cargo.toml
crates/lverifiers/src/: lib.rs
docs/: litmus-zk.key
elf/: riscv32im-succinct-zkvm-elf
pgms/sp1/: Cargo.toml  build.sh
pgms/sp1/elf/: litmus-riscv32im-zkvm-sp1-elf
pgms/sp1/src/: chain.rs  main.rs
resources/env/: template.toml
script/: build.rs  do_exec.sh  do_prove.sh
zk-pgms/sp1/elf/: litmus-riscv32im-zkvm-sp1-elf
